# ExTensorFlowGraphQL

./: SupplyChainOptimization.ipynb  extracting.py  main.py  pyproject.toml
extensorflowgraphql/: application.py  mutations.py  queries.py
models/: sample_model.py
repositories/: SupplyChainAnalytics.ipynb  SupplyChainOptimization.ipynb
schemas/: schema_scm.graphql
