[tool.poetry]
name = "extensorflowgraphql"
version = "0.1.0"
description = ""
authors = ["Michkail <michkail@pitrlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
ariadne = "0.6.0"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pulp = "^2.8.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
