[tool.poetry]
name = "extensorflowgraphql"
version = "0.1.0"
description = ""
authors = ["Michkail <michkail@pitrlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightgbm = "^4.3.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
scikit-learn = "^1.4.2"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
ariadne = "^0.23.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
